[project]
name = "bnet_toolbox"
version = "0.0.4"
description = "A command-line toolbox for interacting with the Battle.net client and Agent"
authors = [
    { name="Ghostopheles", email="ghost@ghst.tools"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: Public Domain",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.11"
dependencies = ["httpx", "typer"]

[project.scripts]
bnet = "bnet_toolbox:handle_cli"

[project.urls]
Homepage = "https://github.com/Ghostopheles/bnet-toolbox"
Repository = "https://github.com/Ghostopheles/bnet-toolbox.git"
Issues = "https://github.com/Ghostopheles/bnet-toolbox/issues"

[build-system]
requires = ["setuptools", "wheel", "cibuildwheel"]
build-backend = "setuptools.build_meta"